kubernetes/apps/kube-system/cilium/gateway/gw-passthrough.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: passthrough
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: ${CLUSTER_LB_PST_GATEWAY}
  listeners:
    - name: tls-passthrough
      port: 443
      protocol: TLS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
